sumo/tests/sumo/spec/departure/errors/speed_given100/errors.sumo.meso
Error: Departure speed for vehicle '1' is too high for the vehicle type 'DEFAULT_VEHTYPE'.
Quitting (on error).
